syntax="proto3";
package kript.api; option go_package = "github.com/liam923/Kript/server/pkg/proto/kript/api";

// An enumeration of different password hashing algorithms.
enum HashAlgorithm {
  UNKNOWN_HASH_ALGORITHM = 0;
  // Concatenate password + salt and use SHA-512.
  SHA_512 = 1;
}

// An enumeration of different symmetric encryption algorithms.
enum SEncryptionAlgorithm {
  UNKNOWN_S_ENCRYPTION_ALGORITHM = 0;
  // Encrypt using AES with a given key.
  AES = 1;
}

// An enumeration of different asymmetric encryption algorithms.
enum AEncryptionAlgorithm {
  UNKNOWN_A_ENCRYPTION_ALGORITHM = 0;
  // Encrypt using AES with a given key.
  RSA = 1;
}

message AccessToken {
  JWT jwt = 1;
}

// A representation of a JSON Web Token.
message JWT {
  // The Base 64 encoded JWT.
  string token = 1;
}
